# duckdb-vss

./: .gitignore  DUCKDB_VSS.md  README.md
.github/workflows/: MainDistributionPipeline.yml
embedded-c++/: CMakeLists.txt  Makefile  README.md  benchmark_deletions.cpp  fashion_mnist_merged_report.csv  mnist_merged_report.csv  recall.cpp
embedded-c++/hnswlib/: create_index.cpp  full_coverage.cpp  new_data.cpp  random.cpp  unreachable_points.cpp
embedded-c++/hnswlib/helpers/: hnswlib_index_operations.cpp  hnswlib_index_operations.h  util.cpp  util.h
embedded-c++/include/benchmark/: benchmark.h  export.h
embedded-c++/include/hnswlib/: hnswalg.h  hnswlib.h
embedded-c++/usearch/: create_index.cpp  full_coverage.cpp  generate_ground_truth.cpp  new_data.cpp  random.cpp  unreachable_points.cpp
embedded-c++/usearch/helpers/: database_setup.cpp  database_setup.h  file_operations.cpp  file_operations.h  index_operations.cpp  index_operations.h  query_runner.cpp  query_runner.h
python/: Makefile  README.md  pyproject.toml
python/benchmark/: setup_duckdb.py
python/data-discovery/: correlation.py  error-visualization.py  graphs.py  trend-comparission.py
python/notebooks/: presentation.ipynb  test.ipynb
python/scripts/: __init__.py
python/scripts/plots/: __init__.py  benchmark_plots.py  correlation.py  error-visualization.py  generate_plots.py  graphs.py  line-graph.py  line_graph.py  memory_connectivity_plots.py  plot_utils.py  search_analysis_plots.py  trend-comparisson.py
python/scripts/setup/: duckdb_data.py
src/: vss_extension.cpp
src/hnsw/: hnsw_index.cpp  hnsw_index_physical_create.cpp  hnsw_index_plan.cpp  hnsw_index_pragmas.cpp  hnsw_index_scan.cpp  hnsw_optimize_expr.cpp  hnsw_optimize_join.cpp  hnsw_optimize_scan.cpp  hnsw_optimize_topk.cpp
src/include/hnsw/: hnsw_index.hpp  hnsw_index_physical_create.hpp  hnsw_index_scan.hpp
src/include/usearch/: index.hpp  index_dense.hpp  index_plugins.hpp
test/sql/hnsw/: where_clause_segfault.test
