[tool.poetry]
name = "duckdb_vss_python_scripts"
version = "0.1.0"
description = "Python scripts to support experiments with DuckDB and VSS"
authors = ["Vigdis", "Thomas"]
package-mode = false



[tool.poetry.dependencies]
python = "^3.8"
h5py = "^3.10.0"
duckdb = "^0.9.2"
pandas = "*"
numpy = "^1.24.0"
networkx = "^3.1"
matplotlib = "^3.6.0"
seaborn = "^0.12.2"
usearch = "*"